package eapli.base.coursemanagement.domain;

public enum CourseStatus {
    CLOSE,
    OPEN,
    ENROLL,
    IN_PROGRESS,
    CLOSED;
}
